--- a/_posts/0000-01-02-tomo-jav.md
+++ b/_posts/0000-01-02-tomo-jav.md
@@ -2,5 +2,12 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+## List of tasks
+
+This is **important** to do all of them
+
+- [x] first done task :+1:
+- [x] second done task
+- [ ] task that need to be done :confused:
+
 Use the left arrow to go back!
