last task is done

--- a/_posts/0000-01-02-tomo-jav.md
+++ b/_posts/0000-01-02-tomo-jav.md
@@ -8,6 +8,6 @@ This is **important** to do all of them
 
 - [x] first done task :+1:
 - [x] second done task
-- [ ] task that need to be done :confused:
+- [x] that is also done
 
 Use the left arrow to go back!
